[package]
name = "cancellable-compression"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
ctrlc = "3.4.6"
env_logger = "0.11.8"
flume = "0.11.1"
gzp = { git = "https://github.com/some1and2-xc/gzp.git", features = ["deflate_zlib_ng", "serde"] }
indicatif = "0.17.11"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
